# prost_example

./: Cargo.toml  README.md  build.rs
proto/googleapis/google/protobuf/: descriptor.proto
proto/helloworld/: helloworld.proto
src/: main.rs
